--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="container">
+        <img src="assets/SPC_transparent.jpg" alt="Logo" class="logo">
         <h2>Ruby Mining Form</h2>
         <form id="registrationForm">
             <label for="nickname">Nickname:</label>
@@ -27,7 +28,7 @@
         <div class="popup-content">
             <p>Fullkan volume anda</p>
             <audio id="audioPlayer" controls>
-                <source src="Rick.mp3" type="audio/mpeg">
+                <source src="assets/Rick.mp3" type="audio/mpeg">
                 Browser Anda tidak mendukung pemutar audio.
             </audio>
             <button id="closePopup">Tutup</button>
