--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ruby Mining Form</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/png" href="assets/favicon.png"> <!-- Favicon -->
 </head>
 <body>
     <div class="container">
-        <img src="assets/spc.jpg" alt="Logo" class="logo">
+        <img src="assets/spc.jpg" alt="Logo" class="logo"> <!-- Logo Form -->
         <h2>Ruby Mining Form</h2>
         <form id="registrationForm">
             <label for="nickname">Nickname:</label>
@@ -20,10 +21,11 @@
             <label for="reason">Alasan kenapa ingin mengikuti event ini?</label>
             <textarea id="reason" required></textarea>
 
-            <button type="button" id="doneButton">Done</button>
+            <button type="submit" id="doneButton">Done</button>
         </form>
     </div>
 
+    <!-- Pop-up -->
     <div id="popup" class="popup">
         <div class="popup-content">
             <p>Fullkan volume anda</p>
