--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ruby Mining Form</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/png" href="assets/favicon.png"> <!-- Favicon -->
+    <link rel="icon" type="image/jpeg" href="assets/favicon.jpg"> <!-- Favicon diperbaiki -->
 </head>
 <body>
     <div class="container">
@@ -30,7 +30,7 @@
         <div class="popup-content">
             <p>Fullkan volume anda</p>
             <audio id="audioPlayer" controls>
-                <source src="assets/spc.mp3" type="audio/mpeg">
+                <source id="audioSource" src="" type="audio/mpeg"> <!-- Sumber audio akan diatur via JavaScript -->
                 Browser Anda tidak mendukung pemutar audio.
             </audio>
             <button id="closePopup">Tutup</button>
