--- a/index.html
+++ b/index.html
@@ -29,10 +29,12 @@
     <div id="popup" class="popup">
         <div class="popup-content">
             <p>Fullkan volume anda</p>
-            <audio id="audioPlayer" controls>
-                <source id="audioSource" src="" type="audio/mpeg"> <!-- Sumber audio akan diatur via JavaScript -->
-                Browser Anda tidak mendukung pemutar audio.
-            </audio>
+            <div id="soundcloudPlayer" class="hidden">
+                <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
+                    src="https://w.soundcloud.com/player/?url=https%3A//soundcloud.com/rick-astley-official/never-gonna-give-you-up-4&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true">
+                </iframe>
+            </div>
+            <button id="playButton">Play</button>
             <button id="closePopup">Tutup</button>
         </div>
     </div>
