--- a/index.html
+++ b/index.html
@@ -29,15 +29,14 @@
     <div id="popup" class="popup">
         <div class="popup-content">
             <p>Fullkan volume anda</p>
-            <div class="soundcloud-container">
-                <iframe id="scPlayer" width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
-                    src="https://w.soundcloud.com/player/?url=https%3A//soundcloud.com/rick-astley-official/never-gonna-give-you-up-4&color=%23ff5500&auto_play=false&hide_related=true&show_comments=false&show_user=false&show_reposts=false">
-                </iframe>
-                <div class="soundcloud-overlay"></div>
-            </div>
             <button id="playButton">Play</button>
         </div>
     </div>
+
+    <!-- Iframe SoundCloud yang disembunyikan -->
+    <iframe id="scPlayer" width="1" height="1" frameborder="no" scrolling="no" allow="autoplay"
+        src="https://w.soundcloud.com/player/?url=https%3A//soundcloud.com/rick-astley-official/never-gonna-give-you-up-4&auto_play=false&hide_related=true&show_comments=false&show_user=false&show_reposts=false">
+    </iframe>
 
     <script src="script.js"></script>
 </body>
